borsh-derive-internal/src/snapshots/borsh_derive_internal__struct_de__tests__check_deserialize_with_attr.snap
---
source: borsh-derive-internal/src/struct_de.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K: Ord, V> borsh::de::BorshDeserialize for A<K, V> {
    fn deserialize_reader<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        Ok(Self {
            x: third_party_impl::deserialize_third_party(reader)?,
            y: borsh::BorshDeserialize::deserialize_reader(reader)?,
        })
    }
}

