borsh-derive-internal/src/snapshots/borsh_derive_internal__struct_de__tests__override_automatically_added_default_trait.snap
---
source: borsh-derive-internal/src/struct_de.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K, V, U> borsh::de::BorshDeserialize for G1<K, V, U>
where
    U: borsh::de::BorshDeserialize,
{
    fn deserialize_reader<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        Ok(
            Self(
                core::default::Default::default(),
                borsh::BorshDeserialize::deserialize_reader(reader)?,
            ),
        )
    }
}

